# -ROS1-NeuPAN-TRON1-

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/rvo_ros/: SetGoals.h  SetGoalsRequest.h  SetGoalsResponse.h
devel/lib/limo_base/: limo_base_node
devel/lib/pkgconfig/: limo_gazebo_sim.pc  neupan_ros.pc  pointcloud_transmission.pc  relocalization_pkg.pc  rvo_ros.pc  websocket.pc
devel/lib/pointcloud_transmission/: node
devel/lib/python3/dist-packages/rvo_ros/srv/: _SetGoals.py  __init__.py
devel/lib/rvo_ros/: formation  rvo_node  set_goals_client
devel/lib/websocket/: pointcloud_converter
devel/share/common-lisp/ros/rvo_ros/srv/: SetGoals.lisp  _package.lisp  _package_SetGoals.lisp  rvo_ros-srv.asd
devel/share/gennodejs/ros/rvo_ros/srv/: SetGoals.js  _index.js
devel/share/limo_base/cmake/: limo_base-msg-paths.cmake
devel/share/limo_gazebo_sim/cmake/: limo_gazebo_simConfig.cmake
devel/share/neupan_ros/cmake/: neupan_rosConfig.cmake
devel/share/pointcloud_transmission/cmake/: pointcloud_transmissionConfig.cmake
devel/share/relocalization_pkg/cmake/: relocalization_pkgConfig.cmake
devel/share/roseus/ros/limo_base/: manifest.l
devel/share/roseus/ros/rvo_ros/: manifest.l
devel/share/roseus/ros/rvo_ros/srv/: SetGoals.l
devel/share/rvo_ros/cmake/: rvo_ros-msg-paths.cmake  rvo_rosConfig.cmake
devel/share/websocket/cmake/: websocketConfig.cmake
src/limo_ros/limo_bringup/rviz/: navigation_diff.rviz
src/neupan_ros/example/gazebo_limo/config/: neupan_planner_limo.yaml
src/neupan_ros/example/gazebo_limo/launch/: neupan_gazebo_limo.launch
src/neupan_ros/example/gazebo_limo/pretrain_limo/: model_5000_tron.pth  model_7000.pth
src/neupan_ros/example/real_robot/config/: neupan_navigation.rviz  neupan_planner_real.yaml  参数.txt
src/neupan_ros/example/real_robot/launch/: global_planner.launch  mid360.launch  neupan_real_robot.launch  pointcloud_to_laserscan.launch
src/neupan_ros/scripts/: README_performance_monitor.md  performance_monitor.py  start_performance_monitor.sh
src/neupan_ros/src/: global_planner_node.py  neupan_core.py  neupan_node.py
src/neupan_ros/src/map/: map.pgm  map.yaml
src/pointcloud_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.fish
src/pointcloud_ws/devel/lib/pkgconfig/: pointcloud_transmission.pc
src/pointcloud_ws/devel/lib/pointcloud_transmission/: node
src/pointcloud_ws/devel/share/pointcloud_transmission/cmake/: pointcloud_transmissionConfig.cmake
src/pointcloud_ws/src/PointCloud_Transmission/: CMakeLists.txt  README.md  demo.cpp  demo_program  lxPointCloud.h
src/pointcloud_ws/src/PointCloud_Transmission/config/: pointcloud_transmission.rviz  pointcloud_transmission.yaml
src/pointcloud_ws/src/PointCloud_Transmission/include/pointcloud_transmission/: lxPointCloud.h
src/pointcloud_ws/src/PointCloud_Transmission/launch/: pointcloud_transmission.launch
src/pointcloud_ws/src/PointCloud_Transmission/src/: pointcloud_transmission_node.cpp
src/relo/: CMakeLists.txt  package.xml
src/relo/launch/: relocalization.launch
src/relo/src/: 234.py  config.yaml
src/websocket/: CMakeLists.txt
src/websocket/launch/: robot_bridge.launch
src/websocket/src/: pointcloud2_to_livox_converter.py  pointcloud_converter.cpp  robot_websocket_bridge.py  simple_websocket_odometry.py
